Adjusted game window size aka Pane
refactored and added documentation